chore: update files from which test coverage is calculated

--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!**/*.(dto|response|guard|strategy|module).(t|j)s",
+      "!**/main.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
