--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
+  "engines": {
+    "node": "14.18.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
